# cactus

./: .gitignore  README.md  publish
cactus/: CMakeLists.txt  cactus.cpp  cactus.h  cactus_bench.cpp  cactus_chat.cpp  cactus_completion.cpp  cactus_context.cpp  cactus_embedding.cpp  cactus_ffi.cpp  cactus_ffi.h  cactus_loader.cpp  cactus_lora.cpp  cactus_tokenization.cpp  cactus_tts.cpp  cactus_utils.cpp
cactus-flutter/: CHANGELOG.md  pubspec.yaml
cactus-flutter/android/src/main/: CMakeLists.txt
cactus-flutter/lib/: cactus.dart  chat.dart  completion.dart  context.dart  ffi_bindings.dart  grammar.dart  init_params.dart  model_downloader.dart  structs.dart  tools.dart  tts_params.dart  types.dart
cactus-ios/: CMakeLists.txt
cactus-ios/Cactus.xcodeproj/project.xcworkspace/xcuserdata/henry.xcuserdatad/: UserInterfaceState.xcuserstate
cactus-react/: README.md  package.json
cactus-react/android/src/main/: CMakeLists.txt  jni.cpp
cactus-react/android/src/main/java/com/cactus/: Cactus.java  LlamaContext.java
cactus-react/android/src/newarch/java/com/cactus/: CactusModule.java
cactus-react/android/src/oldarch/java/com/cactus/: CactusModule.java
cactus-react/ios/: CactusContext.h  CactusContext.mm
cactus-react/src/: NativeCactus.ts  index.ts
cpp/: README.md  cactus_completion.cpp  cactus_context.cpp  cactus_ffi.cpp  cactus_multimodal.cpp  ggml-llama-sim.metallib  ggml-llama.metallib
cpp/example/: CMakeLists.txt  build.sh  main_conversation_ffi.cpp  main_embed.cpp  main_llm.cpp  main_tts.cpp  main_vlm.cpp  main_vlm_ffi.cpp  utils.h
docs/: cpp.md  flutter.md  react.md
examples/cpp/: CMakeLists.txt  build.sh  main_conversation_ffi.cpp  main_embed.cpp  main_llm.cpp  main_tts.cpp  main_vlm.cpp
examples/cpp-vlm/: CMakeLists.txt  build.sh  main_core.cpp  main_ffi.cpp
examples/flutter/: CONVERSATION_API.md  pubspec.yaml
examples/flutter-chat/lib/: cactus_service.dart  chat_screen.dart  main.dart
examples/flutter-chat/lib/widgets/: benchmark_view.dart  message_bubble.dart
examples/flutter/android/: gradle_build_log.txt
examples/flutter/android/app/: build.gradle.kts
examples/flutter/ios/Runner.xcodeproj/: project.pbxproj
examples/flutter/lib/: cactus_service.dart  chat_screen.dart  main.dart  performance_widget.dart
examples/flutter/lib/widgets/: loading_indicator.dart
examples/react/: app.json  cactus.ts  package.json
examples/react/android/: settings.gradle
examples/react/utils/: modelUtils.ts
flutter/: .pubignore  CHANGELOG.md  README.md  pubspec.yaml
flutter/android/: build.gradle
flutter/android/src/main/: CMakeLists.txt
flutter/example/: README.md  pubspec.yaml
flutter/example/android/app/: build.gradle.kts
flutter/example/android/app/src/main/: AndroidManifest.xml
flutter/example/android/app/src/main/kotlin/com/example/cactus_example/: MainActivity.kt
flutter/example/ios/Runner.xcodeproj/: project.pbxproj
flutter/example/lib/: cactus_service.dart  chat_screen.dart  main.dart  message_bubble.dart
flutter/example/test/: widget_test.dart
flutter/lib/: cactus.dart  cactus_context.dart  cactus_lm.dart  cactus_telemetry.dart  cactus_tts.dart  cactus_vlm.dart  ffi_bindings.dart  tools.dart  types.dart  vlm.dart
ios/: CMakeLists.txt
ios/cactus.xcframework/ios-arm64/cactus.framework/: Info.plist
ios/cactus.xcframework/ios-arm64_x86_64-simulator/cactus.framework/: Info.plist
ios/cactus.xcframework/ios-arm64_x86_64-simulator/cactus.framework/Headers/minja/: minja.hpp
ios/cactus.xcframework/ios-arm64_x86_64-simulator/cactus.framework/_CodeSignature/: CodeResources
ios/cactus.xcframework/tvos-arm64/cactus.framework/: Info.plist
ios/cactus.xcframework/tvos-arm64/cactus.framework/Headers/: cactus_ffi.h
ios/cactus.xcframework/tvos-arm64_x86_64-simulator/cactus.framework/: Info.plist
ios/cactus.xcframework/tvos-arm64_x86_64-simulator/cactus.framework/Headers/minja/: chat-template.hpp
ios/cactus.xcframework/tvos-arm64_x86_64-simulator/cactus.framework/_CodeSignature/: CodeResources
react/: README.md  cactus-react-native.podspec  package.json  tsconfig.json
react/android/src/main/: CMakeLists.txt  jni.cpp
react/android/src/main/java/com/cactus/: Cactus.java  LlamaContext.java
react/android/src/newarch/java/com/cactus/: CactusModule.java
react/android/src/oldarch/java/com/cactus/: CactusModule.java
react/example/: .projectId.json  README.md  babel.config.js  cactus.ts  components.tsx  package.json
react/example/android/app/: build.gradle
react/example/android/app/src/main/: AndroidManifest.xml
react/example/android/app/src/main/res/values/: strings.xml
react/example/app/: _layout.tsx  index.tsx
react/ios/: Cactus.mm  CactusContext.h  CactusContext.mm
react/scripts/: postInstall.js
react/src/: NativeCactus.ts  agent.ts  index.ts  lm.ts  projectId.ts  telemetry.ts  tools.ts  tts.ts  vlm.ts
scripts/: build-flutter-android.sh  build-flutter.sh  build-ios.sh  build-react.sh  clean.sh  patch-from-llama-cpp.sh  publish.sh
(+2 files in other folders)
